wetter-app/assets/css/local.css
.marginSetter {
    margin-top: 3%;
    margin-bottom: 5%;
    margin-left: 6%;
    margin-right: 6%;
}

img {
    border-radius: 4%;
}

#div {
    height: 1000px; /* Used to enable scrolling */
    background: linear-gradient(55deg, #aad5ec 15%, #2a6ae3 51%, #5961d0 85%);
}

body {
    overflow: hidden;
    position: fixed;    
}

